# ydotool

./: README.md
Daemon/: CMakeLists.txt
Daemon/openrc/: ydotoold.service-openrc.in
Daemon/systemd/: ydotoold.service.in
